kustomize-app/reversewords_app-2/overlay/pre/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: reverse-words
  name: reverse-words
spec:
  template:
    spec:
      $setElementOrder/containers:
      - name: reverse-words
      containers:
      - image: quay.io/mavazque/reversewords:v0.0.2
        name: reverse-words
